<resources>
    <string name="app_name">Total_Logix_Customer</string>
    <string name="splash">Splash</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading..</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="registered_email">Registered Email</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_message">Enter your registered email address ,We will send you an email to reset your password</string>
    <string name="cancel">Cancel</string>
    <string name="user">User</string>
    <string name="menu_home">Home</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_cancelled">Cancelled</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="vehicle_info">VAHICLE INFO</string>
    <string name="ratekm">RATE/KM</string>
    <string name="request_ride">Logix Now</string>
    <string name="book_rides">Logix Later</string>
    <string name="pick_up_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="title_activity_stub__maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Location Updates -->

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_fare_estimate">FareEstimate</string>
    <string name="total_km">Distance</string>
    <string name="number_of_boxes">Boxes</string>
    <string name="weight">Weight in KG</string>
    <string name="vahicle_type">Vahicle Type</string>
    <string name="car_type1">Suzuki</string>
    <string name="car_type2">Riksha</string>
    <string name="fare_estimate">Fare Estimate</string>
    <string name="cargo_info">Cargo Details</string>
    <string name="confirm">Confirm</string>
    <string name="boxes_weight_error">Kinly choose no of Boxes and weight</string>
    <string name="cargoinfo_error">Kindly select Cargo Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_current_ride">CurrentRideActivity</string>
    <string name="invalid_location">Kindly add pickup and drop location</string>
    <string name="driver_loading">Driver Loading</string>
    <string name="cargotype">Cargo Type</string>
    <string name="KM">KM</string>
    <string name="INVALID_DISTANCE">INVALID DISTANCE</string>
    <string name="ok">OK</string>
    <string name="pickuprequest">Pickup</string>
    <string name="droprequest">Drop</string>
    <string name="update_password">Change Password</string>
    <string name="update">Update</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="completed">Completed</string>
    <string name="fare">Fare</string>
    <string name="sample_fare">Rs.800</string>
    <string name="paid_via">Paid Via</string>
    <string name="cash">Cash</string>
    <string name="settlement">Settlement</string>
    <string name="settlement_sample">pending</string>
    <string name="total_distance">Total Distance</string>
    <string name="sample_total_distance">6.5 KM</string>
    <string name="Arrived">Arrived</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="take_payment">Take Payment</string>
    <string name="complete">Complete</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="waiting_time_sample">00:10 Minutes</string>
    <string name="date_time">Date/Time</string>
    <string name="phone_call_content_description">phone call</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="from">FROM</string>
    <string name="sample_from">Novex Dry Cleaners, Asghar Chambers, Jail Road, Hirabad, Hyderabad, Pakistan</string>
    <string name="to">TO</string>
    <string name="arrow">arrow</string>
    <string name="to_address">Zaylabs, Ashar Chambers,Jail Road, Hirabad, Hyderabad, Pakistan</string>
    <string name="distance">Pickup Distance</string>
    <string name="Sample_km_Away">3.67 KM</string>
    <string name="date">Date</string>
    <string name="sample_date">March 7th,2017</string>
    <string name="time">Time</string>
    <string name="sample_time">10:00 PM</string>
    <string name="customer_name">CUSTOMER NAME</string>
    <string name="sample_customer_name">John Doe</string>
    <string name="est_distance">Est: Ride Distance</string>
    <string name="sample_distance">6 KM</string>
    <string name="decline">DECLINE</string>
    <string name="accept">Accept</string>
    <string name="sample_phone">00923332626150</string>

    <string name="cargo_type">Cargo Type</string>
    <string name="cargo_type_sample">Dry Items</string>
    <string name="boxes">Boxes</string>
    <string name="sample_boxes">Less than equal 5</string>
    <string name="_12_kg">12 KG</string>
    <string name="driver_name">Driver Name</string>
    <string name="gate_pass">Gate Pass</string>
    <string name="upload_gate_pass">Upload Gate Pass</string>
    <string name="Vahicle_Type_Error">Kindly Choose Vahicle Type</string>
    <string name="current_balance">Current Balance</string>
    <string name="voucher">Voucher</string>
    <string name="active_voucher">Active Voucher</string>
    <string name="apply_voucher">Apply Voucher</string>
    <string name="add_balance">Add Balance</string>
    <string name="enter_voucher_code">Enter Voucher Code</string>
    <string name="Voucher_Eg">eg: TL-20%-Today</string>
    <string name="purchase">Purchase</string>
    <string name="valid">Form is Valid</string>
    <string name="invalid">Form is Invalid</string>
    <string name="scan_card">Scan Card</string>
    <string name="verify">Verify</string>
    <string name="pay_via_credit_card">Pay via Credit Card</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="hint_amount">Rs.0</string>
    <string name="cashVoucher">Pay Via Cash Voucher</string>
    <string name="apply_cash_voucher">Apply Cash Voucher</string>
    <string name="enter_cash_voucher">Enter Cash Voucher</string>
    <string name="cashvoucherexample">eg.TL-0094</string>
    <string name="transaction_history">Transaction History</string>
    <string name="old_balance">Old Balance</string>
    <string name="added_amount">Added Amount</string>
    <string name="updated_balance">Updated Balance</string>
    <string name="source">Source</string>
    <string name="Sample_source">Credit Card</string>
    <string name="Menu_current_logix">Current Logix</string>
    <string name="Munu_pending_request">Pending Request</string>
    <string name="track_logix">Track Logix</string>


</resources>
