<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <!--Put form controls here-->


        <ImageView
            android:id="@+id/mapview"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/phone_call_content_description"
            android:paddingBottom="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:src="@drawable/car" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargo_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />


        <Spinner
            android:id="@+id/discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:prompt="@string/cargo_info"
           
            />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_boxes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/number_Boxes_picker"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:focusable="false"
            app:max="50"
            app:min="1"
            app:value="1"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/weight_picker"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:focusable="false"
            app:max="100"
            app:min="1"
            app:value="1"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gate_pass"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />

        <Button
            android:id="@+id/gatepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_gate_pass"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="center"
            android:padding="@dimen/margin_10"
            android:id="@+id/request_confirm"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:id="@+id/request_cancel"
            android:padding="@dimen/margin_10"
            />

    </LinearLayout>
</ScrollView>