<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.raza.total_logix_customer.fragment.voucherFragment"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingTop="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/mapview"
            android:src="@mipmap/splash"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollviewrequest"
            android:layout_below="@id/mapview"
            >

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/linear_child1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <TextView
                    android:id="@+id/VcodeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_20"
                    android:text="@string/enter_voucher_code"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/voucehr_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Voucher_Eg"
                    android:padding="@dimen/margin_20"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/text_color"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_verify_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/text_color"
                        android:padding="@dimen/margin_15"
                        android:text="@string/apply_voucher"

                        android:textStyle="normal" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>



    </RelativeLayout>


</FrameLayout>